--- a/index.html
+++ b/index.html
@@ -3,9 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>dotLAB Brazil</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <container id="cabecalho">
+        <header>
+            <h1>bem vindo</h1>
+        </header>
+    </container>
+
+    <container id="conteudo">
+        <main>
+            <h2>dotLAB Brazil</h2>
+        </main>
+    </container>
+
+    <container id="rodape">
+        <footer>
+            <h3>pesquisadores</h3>
+        </footer>  
+    </container>
 </body>
+
+<script src="index.js"></script>
+
 </html>
