Adição dos cards e infos

--- a/index.html
+++ b/index.html
@@ -21,17 +21,133 @@
             </nav>
         </header>
   
-        <div class="banner">
+        <section class="banner">
             <img src="/img/img 1.png" id="fundo_img" alt=""> 
-            <div class="texto_container">
+            <div class="banner_info_container container">
                 <h1>Inteligência Artificial para transformar a Saúde Pública</h1>
                 <p>Grupo de pesquisa interinstitucional com foco em Doenças Tropicais Negligenciadas.</p>
 
                 <button>Conheça o DotLab</button>
             </div>
-        </div>  
+        </section>  
 
-        <main class="container"></main>
+        <section class="main_img">
+            <img src="/img/img 2.png" id="teia_1" alt="">
+        </section>
+
+        <main class="container">
+            <div class="main_info container">
+                <h1>Nossas Iniciativas Científicas</h1>
+                <p>Projetos do dotLAB Brasil que aplicam inteligência artificial para enfrentar desafios da saúde pública, com foco nas Doenças Tropicais Negligenciadas.</p>
+            </div>
+
+            <section class="cards container">
+
+                <div id="angels" class="card_caixa" data-color="#B1488A">
+                    <div class="card_cont">
+                        <img id="angels_img" src="/img/logos/angels.png" alt="">
+                        <div class="card_info">
+                            <p>Predição do risco de óbito fetal ao longo do acompanhamento pré-natal contínuo, utilizando dados clínicos e modelos preditivos.</p>
+                            <span class="link_card"><a href="">Conhecer solução</a></span>
+                        </div>
+                    </div>
+                </div>
+
+                 <div id="hansenai" class="card_caixa" data-color="#6D349D">
+                    <div class="card_cont">
+                        <img id="hansenai_img" src="/img/logos/hansenai.png" alt="">
+                        <div class="card_info">
+                            <p>Predição e monitoramento inteligente da resposta ao tratamento da hanseníase, com base em dados clínicos e históricos do paciente.</p>
+                            <span class="link_card"><a href="">Conhecer solução</a></span>
+                        </div>
+                    </div>
+                </div>
+
+                 <div id="valeria" class="card_caixa" data-color="#3EB7A0">
+                    <div class="card_cont">
+                        <img id="valeria_img" src="/img/logos/valeria.png" alt="">
+                        <div class="card_info">
+                            <p>Identificação precoce e automatizada de arboviroses por meio de técnicas de inteligência artificial aplicadas a dados clínicos e epidemiológicos.</p>
+                            <span class="link_card"><a href="">Conhecer solução</a></span>
+                        </div>
+                    </div>
+                </div>
+
+                 <div id="iara" class="card_caixa" data-color="#8C0738">
+                    <div class="card_cont">
+                        <img id="iara_img" src="/img/logos/IARA.png" alt="">
+                        <div class="card_info">
+                            <p>Aplicação de técnicas de machine learning para vigilância ativa e preditiva da malária, com base em dados epidemiológicos e ambientais.</p>
+                            <span class="link_card"><a href="">Conhecer solução</a></span>
+                        </div>
+                    </div>
+                </div>
+
+                 <div id="tito" class="card_caixa" data-color="#411310">
+                    <div class="card_cont">
+                        <img id="tito_img" src="/img/logos/tito.png" alt="">
+                        <div class="card_info">
+                            <p class="tito">Aplicação de técnicas de machine learning para vigilância ativa e preditiva da malária, com base em dados epidemiológicos e ambientais.</p>
+                            <span class="link_card"><a href="">Conhecer solução</a></span>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+            <img src="/img/img 3.png" alt="" id="teia_2">
+
+            <section class="container">
+                <div class="info_final_texto">
+                    <h1>Nosso impacto em dados</h1>
+                    <p>O dotLAB Brasil é um grupo de pesquisa interdisciplinar que conecta ciência, inovação e saúde pública. Atuamos com abrangência nacional e reconhecimento internacional.</p>
+                </div>
+
+                <div class="dados_cards">
+                    <div class="dados_caixa">
+                        <div class="dados_cont" id="dados_pesq">
+                            <span class="caixa_icone"><img id="pesquisador_img" src="/img/icons/pesquisadores.png" alt=""></span>
+                            <p>+25 pesquisadores</p>
+                        </div>
+                    </div>
+
+                    <div class="dados_caixa">
+                        <div class="dados_cont" id="dados_inst">
+                            <span class="caixa_icone"><img id="instituto_img" src="/img/icons/institudo.png" alt=""></span>
+                            <p>+10 instituições</p>
+                        </div>
+                    </div>
+
+                    <div class="dados_caixa">
+                        <div class="dados_cont" id="dados_publi">
+                            <span class="caixa_icone"><img id="publicacao_img" src="/img/icons/publicacao.png" alt=""></span>
+                            <p>+40 publicações</p>
+                        </div>
+                    </div>
+
+                    <div class="dados_caixa">
+                        <div class="dados_cont" id="dados_globo">
+                            <span class="caixa_icone"><img id="globo_img" src="/img/icons/globo.png" alt=""></span>
+                            <p>Em cinco estados</p>
+                        </div>
+                    </div>
+
+                    <div class="dados_caixa">
+                        <div class="dados_cont" id="dados_solcao">
+                            <span class="caixa_icone"><img id="solucao_img" src="/img/icons/sulucao.png" alt=""></span>
+                            <p>+6 soluções reais </p>
+                        </div>
+                    </div>
+
+                    <div class="dados_caixa">
+                        <div class="dados_cont" id="dados_ia">
+                            <span class="caixa_icone"><img id="ia_img" src="/img/icons/ia.png" alt=""></span>
+                            <p>+15 modelos de IA </p>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+        </main>
     
 </body>
 
