Animação das imagens dos parceiros

--- a/index.html
+++ b/index.html
@@ -273,26 +273,13 @@
         </div>
 
         <!-- Slider main container -->
-        <div class="swiper mySwiper">
-          <div class="swiper-wrapper">
-            <div class="swiper-slide">
-              <img src="/img/logos/UPE.png" alt="">
-            </div>
-            <div class="swiper-slide">
-              <img src="/img/logos/ecomp.png" alt="">
-            </div>
-            <div class="swiper-slide">
-              <img src="/img/logos/UFPE.png" alt="">
-            </div>
-          </div>
-
-          <!-- Botões de navegação -->
-          <div class="swiper-button-next"></div>
-          <div class="swiper-button-prev"></div>
-          <div class="swiper-pagination"></div>
-        </div> 
-      </div>
-    </section>
+        <section class="parceiros container">
+            <ul id="image-list">
+                <li><div><img src="/img/logos/UPE.png" alt="Logo UPE"></div></li>
+                <li><div><img src="/img/logos/ecomp.png" alt="Logo ecomp"></div></li>
+                <li><div><img src="/img/logos/UFPE.png" alt="Logo UFPE"></div></li>
+            </ul>
+        </section>
 
     <footer class="footer">
       <div class="footer-container">
