--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
       href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
       rel="stylesheet"
     />
-    <link href="/css/global.css" rel="stylesheet" />
-    <link href="/css/home.css" rel="stylesheet" />
-    <link href="/css/respansivos/home_responsivo.css" rel="stylesheet" />
-    <link href="/css/var.css" rel="stylesheet" />
+    <link href="./css/global.css" rel="stylesheet" />
+    <link href="./css/home.css" rel="stylesheet" />
+    <link href="./css/respansivos/home_responsivo.css" rel="stylesheet" />
+    <link href="./css/var.css" rel="stylesheet" />
   </head>
 
   <body>
