--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <body>
 
     <header class="container">
-      <img alt="Logo do dotLAB Brasil" src="/img/logos/dotLab 1.png" />
+      <img alt="Logo do dotLAB Brasil" src="./img/logos/dotLab 1.png" />
       <button class="menu-toggle" aria-label="Abrir menu">&#9776;</button>
       <nav>
         <ul>
@@ -43,8 +43,8 @@
  
     <main class="container">
       <section class="main-section">
-        <img src="/img/img 2.png" alt="" class="teia" id="teia1" aria-hidden="true">
-        <img src="/img/img 3.png" alt="" class="teia" id="teia2" aria-hidden="true">
+        <img src="./img/img 2.png" alt="" class="teia" id="teia1" aria-hidden="true">
+        <img src="./img/img 3.png" alt="" class="teia" id="teia2" aria-hidden="true">
 
         <div class="main-container">
           <div class="main_info container">
@@ -63,7 +63,7 @@
                 <img
                   alt="Logo do projeto Angels"
                   id="angels_img"
-                  src="/img/logos/angels.png"
+                  src="./img/logos/angels.png"
                 />
                 <div class="card_info">
                   <p>
@@ -81,7 +81,7 @@
                 <img
                   alt="Logo do projeto Hansen.ai"
                   id="hansenai_img"
-                  src="/img/logos/hansenai.png"
+                  src="./img/logos/hansenai.png"
                 />
                 <div class="card_info">
                   <p>
@@ -99,7 +99,7 @@
                 <img
                   alt="Logo do projeto Valéria"
                   id="valeria_img"
-                  src="/img/logos/valeria.png"
+                  src="./img/logos/valeria.png"
                 />
                 <div class="card_info">
                   <p>
@@ -117,7 +117,7 @@
                 <img
                   alt="Logo do projeto IARA"
                   id="iara_img"
-                  src="/img/logos/IARA.png"
+                  src="./img/logos/IARA.png"
                 />
                 <div class="card_info">
                   <p>
@@ -135,7 +135,7 @@
                 <img
                   alt="Logo do projeto Tito"
                   id="tito_img"
-                  src="/img/logos/tito.png"
+                  src="./img/logos/tito.png"
                 />
                 <div class="card_info">
                   <p class="tito">
@@ -153,7 +153,7 @@
                 <img
                   alt="Logo dos Dashboards dotLAB"
                   id="dashboards_img"
-                  src="/img/logos/DASH BOARDS.png"
+                  src="./img/logos/DASH BOARDS.png"
                 />
                 <div class="card_info">
                   <p class="dashboard" color="var(--cor-vermelho)">
@@ -189,7 +189,7 @@
                     ><img
                       alt=""
                       id="pesquisador_img"
-                      src="/img/icons/pesquisadores.png"
+                      src="./img/icons/pesquisadores.png"
                   /></span>
                   <p>+25 pesquisadores</p>
                 </div>
@@ -198,7 +198,7 @@
               <div class="dados_caixa">
                 <div class="dados_cont" id="dados_inst">
                   <span class="caixa_icone"
-                    ><img alt="" id="instituto_img" src="/img/icons/institudo.png"
+                    ><img alt="" id="instituto_img" src="./img/icons/institudo.png"
                   /></span>
                   <p>+10 instituições</p>
                 </div>
@@ -210,7 +210,7 @@
                     ><img
                       alt=""
                       id="publicacao_img"
-                      src="/img/icons/publicacao.png"
+                      src="./img/icons/publicacao.png"
                   /></span>
                   <p>+40 publicações</p>
                 </div>
@@ -219,7 +219,7 @@
               <div class="dados_caixa">
                 <div class="dados_cont" id="dados_globo">
                   <span class="caixa_icone"
-                    ><img alt="" id="globo_img" src="/img/icons/globo.png"
+                    ><img alt="" id="globo_img" src="./img/icons/globo.png"
                   /></span>
                   <p>Em cinco estados</p>
                 </div>
@@ -228,7 +228,7 @@
               <div class="dados_caixa">
                 <div class="dados_cont" id="dados_solcao">
                   <span class="caixa_icone"
-                    ><img alt="" id="solucao_img" src="/img/icons/sulucao.png"
+                    ><img alt="" id="solucao_img" src="./img/icons/sulucao.png"
                   /></span>
                   <p>+6 soluções reais</p>
                 </div>
@@ -237,7 +237,7 @@
               <div class="dados_caixa">
                 <div class="dados_cont" id="dados_ia">
                   <span class="caixa_icone"
-                    ><img alt="" id="ia_img" src="/img/icons/ia.png"
+                    ><img alt="" id="ia_img" src="./img/icons/ia.png"
                   /></span>
                   <p>+15 modelos de IA</p>
                 </div>
@@ -264,7 +264,7 @@
         <div class="cards_final">
           <div class="cont">
             <div class="icon">
-              <img alt="" id="proposito_img" src="/img/icons/proposito.png" />
+              <img alt="" id="proposito_img" src="./img/icons/proposito.png" />
             </div>
             <div class="texto">
               <strong>Propósito</strong>
@@ -274,7 +274,7 @@
 
           <div class="cont">
             <div class="icon">
-              <img alt="" id="acessibilidade_img" src="/img/icons/acessibilidade.png"/>
+              <img alt="" id="acessibilidade_img" src="./img/icons/acessibilidade.png"/>
             </div>
             <div class="texto">
               <strong>Acessibilidade</strong>
@@ -284,7 +284,7 @@
 
           <div class="cont">
             <div class="icon">
-              <img alt="" id="aplicacao_img" src="/img/icons/aplicacao.png" />
+              <img alt="" id="aplicacao_img" src="./img/icons/aplicacao.png" />
             </div>
             <div class="texto">
               <strong>Aplicação real</strong>
@@ -309,9 +309,9 @@
         <!-- Slider main container -->
         <section class="parceiros container">
             <ul id="image-list">
-                <li><div><img src="/img/logos/UPE.png" alt="Logo UPE"></div></li>
-                <li><div><img src="/img/logos/ecomp.png" alt="Logo ecomp"></div></li>
-                <li><div><img src="/img/logos/UFPE.png" alt="Logo UFPE"></div></li>
+                <li><div><img src="./img/logos/UPE.png" alt="Logo UPE"></div></li>
+                <li><div><img src="./img/logos/ecomp.png" alt="Logo ecomp"></div></li>
+                <li><div><img src="./img/logos/UFPE.png" alt="Logo UFPE"></div></li>
             </ul>
         </section>
     </section>
@@ -323,7 +323,7 @@
           <img
             alt="Logo do dotLAB Brasil - rodapé"
             class="footer-logo"
-            src="img/logos/dotLab 2.png"
+            src="./img/logos/dotLab 2.png"
           />
           <div class="contato">
             <h3>Contato</h3>
@@ -331,19 +331,19 @@
               <img
                 alt="Ícone telefone"
                 class="icon"
-                src="/img/icons/phone.png"
+                src="./img/icons/phone.png"
               />
               (00) 0000-0000
             </p>
             <p>
-              <img alt="Ícone e-mail" class="icon" src="/img/icons/email.png" />
+              <img alt="Ícone e-mail" class="icon" src="./img/icons/email.png" />
               dotlab@gmail.com
             </p>
             <p>
               <img
                 alt="Ícone Instagram"
                 class="icon"
-                src="/img/icons/insta.png"
+                src="./img/icons/insta.png"
               />
               @dotlabbrazil
             </p>
