--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
       <nav>
         <ul>
           <li><a href="#">Início</a></li>
-          <li><a href="#">Sobre</a></li>
-          <li><a href="#">Projetos</a></li>
+          <li><a href="#Iniciativas">Sobre</a></li>
+          <li><a href="./projetos.html">Projetos</a></li>
           <li><a href="#">Parceria</a></li>
         </ul>
       </nav>
@@ -37,11 +37,11 @@
           Grupo de pesquisa interinstitucional com foco em Doenças Tropicais
           Negligenciadas.
         </p>
-        <button>Conheça o DotLab</button>
+        <button onclick="window.location.href='#Iniciativas'">Conheça o DotLab</button>
       </div>
     </section>
  
-    <main class="container">
+    <main class="container" id="Iniciativas">
       <section class="main-section">
         <img src="./img/img 2.png" alt="" class="teia" id="teia1" aria-hidden="true">
         <img src="./img/img 3.png" alt="" class="teia" id="teia2" aria-hidden="true">
@@ -156,16 +156,17 @@
                   src="./img/logos/DASH BOARDS.png"
                 />
                 <div class="card_info">
-                  <p class="dashboard" color="var(--cor-vermelho)">
-                    - Dashboard Angels<br />
-                    - Dashboard Hansen.ai<br />
-                    - Dashboard Zika<br />
-                    - Dashboard Iara<br />
-                    - Dashboard HSG<br />
-                    - Dashboard Chika
+                  <p class="dashboard">
+                    <a href="#SophIA">- Dashboard SophIA</a>
+                    <a href="#angels">- Dashboard Angels</a>
+                    <a href="#HansenAI">- Dashboard Hansen.ai</a>
+                    <a href="#Zika">- Dashboard Zika</a>
+                    <a href="#IAra">- Dashboard IAra</a>
+                    <a href="#HSG">- Dashboard HSG</a>
+                    <a href="#Chika">- Dashboard Chika</a>
                   </p>
-                  <span class="link_card"
-                    ><a href="">Conheça nossos dashboards</a></span
+                  <span class="link_dash"
+                    ><a href="" style="color:#000000; font-weight: 500;">Conheça nossos dashboards <br/> (painel interativo)</a></span
                   >
                 </div>
               </div>
@@ -336,10 +337,9 @@
               (00) 0000-0000
             </p>
             <p>
-              <img alt="Ícone e-mail" class="icon" src="./img/icons/email.png" />
-              dotlab@gmail.com
+              <img alt="Ícone e-mail" class="icon" src="./img/icons/email.png" /> contato@dotlabbrazil.com.br
             </p>
-            <p>
+            <p onclick="window.location.href='https://www.instagram.com/dotlabbrazil/'">
               <img
                 alt="Ícone Instagram"
                 class="icon"
@@ -354,8 +354,8 @@
           <h3>Mapa do Site</h3>
           <ul>
             <li><a href="#">Início</a></li>
-            <li><a href="#">Sobre</a></li>
-            <li><a href="#">Projetos</a></li>
+            <li><a href="#Iniciativas">Sobre</a></li>
+            <li><a href="./projetos.html">Projetos</a></li>
             <li><a href="#">Parceria</a></li>
           </ul>
         </div>
