--- a/index.html
+++ b/index.html
@@ -76,6 +76,24 @@
               </div>
             </div>
 
+            <div class="card_caixa" data-color="#4b2d2f" id="SophIA">
+              <div class="card_cont">
+                <img
+                  alt="logo do projeto SophIA"
+                  id="SophIA_img"
+                  src="./img/logos/sophIA.svg"
+                />
+                <div class="card_info">
+                  <p>
+                    Uso de IA para predição de doenças, condições clínicas e 
+                    mortalidade neonatal com dados de um hospital público de 
+                    referência em Pernambuco.
+                  </p>
+                  <span class="link_card"><a href="">Conhecer solução</a></span>
+                </div>
+              </div>
+            </div>
+
             <div class="card_caixa" data-color="#6D349D" id="hansenai">
               <div class="card_cont">
                 <img
