--- a/projetos.html
+++ b/projetos.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>dotLAB Brazil</title>
-     <link rel="stylesheet" href="/css/global.css">
-     <link rel="stylesheet" href="/css/projetos.css">
-     <link rel="stylesheet" href="/css/var.css">
+     <link rel="stylesheet" href="./css/global.css">
+     <link rel="stylesheet" href="./css/projetos.css">
+     <link rel="stylesheet" href="./css/var.css">
 </head>
 <body>
     <header class="container">
-            <img src="/img/logos/dotLab 1.png" alt="">
+            <img src="./img/logos/dotLab 1.png" alt="">
             <nav>
                 <ul>
                     <li><a href="#">Início</a></li>
@@ -22,14 +22,14 @@
     </header>
 
     <section class="banner">
-            <img src="/img/img 6.png" id="fundo_img" alt=""> 
+            <img src="./img/img 6.png" id="fundo_img" alt=""> 
             <div class="banner_info_container container">
                 <h1>Projetos - Soluções</h1>
                 <p>Projetos do dotLAB Brasil que aplicam inteligência artificial para enfrentar desafios da saúde pública, com foco nas Doenças Tropicais Negligenciadas.</p>
             </div>
     </section>  
 
-    <div class="teia1-projetos"><img src="/img/teia1-projeto.png" alt=""></div>
+    <div class="teia1-projetos"><img src="./img/teia1-projeto.png" alt=""></div>
 
     <main class="container">
 
@@ -37,7 +37,7 @@
             <div id="angels" class="card_caixa" data-color="#B1488A">
 
                 <div class="card_cont">
-                    <img src="/img/card_bg/angels.png" alt="">
+                    <img src="./img/card_bg/angels.png" alt="">
                     
                 </div>
 
@@ -53,7 +53,7 @@
             <div id="angels" class="card_caixa" data-color="#6D349D">
 
                 <div class="card_cont">
-                    <img id="hansenai-projeto" src="/img/card_bg/hansenai.png" alt="">
+                    <img id="hansenai-projeto" src="./img/card_bg/hansenai.png" alt="">
                 </div>
 
                 <div class="card_info">
@@ -68,7 +68,7 @@
             <div id="angels" class="card_caixa" data-color="#3EB7A0">
 
                 <div class="card_cont">
-                    <img src="/img/card_bg/valeria.png" alt="">
+                    <img src="./img/card_bg/valeria.png" alt="">
                 </div>
 
                 <div class="card_info">
@@ -82,7 +82,7 @@
             <div id="angels" class="card_caixa" data-color="#8C0738">
 
                 <div class="card_cont">
-                    <img src="/img/card_bg/iara.png" alt="">
+                    <img src="./img/card_bg/iara.png" alt="">
                 </div>
 
                 <div class="card_info">
@@ -96,7 +96,7 @@
             <div id="angels" class="card_caixa" data-color="#411310">
 
                 <div class="card_cont">
-                    <img src="/img/card_bg/tito.png" alt="">
+                    <img src="./img/card_bg/tito.png" alt="">
                 </div>
                 
                 <div class="card_info">
