--- a/projetos.html
+++ b/projetos.html
@@ -9,16 +9,18 @@
      <link rel="stylesheet" href="./css/var.css">
 </head>
 <body>
+
     <header class="container">
-            <img src="./img/logos/dotLab 1.png" alt="">
-            <nav>
-                <ul>
-                    <li><a href="#">Início</a></li>
-                    <li><a href="#">Sobre</a></li>
-                    <li><a href="#">Projetos</a></li>
-                    <li><a href="#">Parceria</a></li>
-                </ul>
-            </nav>
+      <img alt="Logo do dotLAB Brasil" src="./img/logos/dotLab 1.png" />
+      <button class="menu-toggle" aria-label="Abrir menu">&#9776;</button>
+      <nav>
+        <ul>
+          <li><a href="./index.html">Início</a></li>
+          <li><a href="#Iniciativas">Sobre</a></li>
+          <li><a href="./projetos.html">Projetos</a></li>
+          <li><a href="#">Parceria</a></li>
+        </ul>
+      </nav>
     </header>
 
     <section class="banner">
@@ -31,7 +33,7 @@
 
     <div class="teia1-projetos"><img src="./img/teia1-projeto.png" alt=""></div>
 
-    <main class="container">
+    <main class="main-container container">
 
         <section class="cards container">
             <div class="card_caixa" data-color="#B1488A">
