--- a/index.html
+++ b/index.html
@@ -385,7 +385,6 @@
     </footer>  
   </body>
   
-  <script src="index.js"></script>
-  <script src="animacao.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+  <script src="./JS/index.js"></script>
+  <script src="./JS/animacao.js"></script>
 </html>
