--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <button class="menu-toggle" aria-label="Abrir menu">&#9776;</button>
       <nav>
         <ul>
-          <li><a href="#">Início</a></li>
+          <li><a href="./index.html">Início</a></li>
           <li><a href="#Iniciativas">Sobre</a></li>
           <li><a href="./projetos.html">Projetos</a></li>
           <li><a href="#">Parceria</a></li>
@@ -371,7 +371,7 @@
         <div class="footer-links">
           <h3>Mapa do Site</h3>
           <ul>
-            <li><a href="#">Início</a></li>
+            <li><a href="./index.html">Início</a></li>
             <li><a href="#Iniciativas">Sobre</a></li>
             <li><a href="./projetos.html">Projetos</a></li>
             <li><a href="#">Parceria</a></li>
