correção de img

--- a/projetos.html
+++ b/projetos.html
@@ -47,7 +47,7 @@
               <img src="./img/card_bg/angels.png" alt="" />
             </div>
 
-            <div class="card_info" data-seta="/img/card_setas/seta_angels.png">
+            <div class="card_info" data-seta="./img/card_setas/seta_angels.png">
               <a href=""></a>
             </div>
 
@@ -69,7 +69,7 @@
 
             <div
               class="card_info"
-              data-seta="/img/card_setas/seta_hansenia.png"
+              data-seta="./img/card_setas/seta_hansenia.png"
             >
               <a href=""></a>
             </div>
@@ -85,7 +85,7 @@
               <img src="./img/card_bg/valeria.png" alt="" />
             </div>
 
-            <div class="card_info" data-seta="/img/card_setas/seta_valeria.png">
+            <div class="card_info" data-seta="./img/card_setas/seta_valeria.png">
               <a href=""></a>
             </div>
 
@@ -101,7 +101,7 @@
               <img src="./img/card_bg/iara.png" alt="" />
             </div>
 
-            <div class="card_info" data-seta="/img/card_setas/seta_IAra.png">
+            <div class="card_info" data-seta="./img/card_setas/seta_IAra.png">
               <a href=""></a>
             </div>
 
@@ -117,7 +117,7 @@
               <img src="./img/card_bg/tito.png" alt="" />
             </div>
 
-            <div class="card_info" data-seta="/img/card_setas/seta_tito.png">
+            <div class="card_info" data-seta="./img/card_setas/seta_tito.png">
               <a href=""></a>
             </div>
 
@@ -141,37 +141,37 @@
           <section class="cards-dash container">
             <div class="card_caixa_dash" data-color="#B1488A">
               <div class="card_cont_dash">
-                <img src="/img/card_bg/dash-angels.png" alt="" />
+                <img src="./img/card_bg/dash-angels.png" alt="" />
               </div>
             </div>
 
             <div class="card_caixa_dash" data-color="#6D349D">
               <div class="card_cont_dash">
-                <img src="/img/card_bg/dash-hansenai.png" alt="" />
+                <img src="./img/card_bg/dash-hansenai.png" alt="" />
               </div>
             </div>
 
             <div class="card_caixa_dash" data-color="#3EB7A0">
               <div class="card_cont_dash">
-                <img src="/img/card_bg/dash-valeria.png" alt="" />
+                <img src="./img/card_bg/dash-valeria.png" alt="" />
               </div>
             </div>
 
             <div class="card_caixa_dash" data-color="#043241">
               <div class="card_cont_dash">
-                <img src="/img/card_bg/dash-iara.png" alt="" />
+                <img src="./img/card_bg/dash-iara.png" alt="" />
               </div>
             </div>
 
             <div class="card_caixa_dash" data-color="#007B55">
               <div class="card_cont_dash">
-                <img src="/img/card_bg/dash-penultimo.png" alt="" />
+                <img src="./img/card_bg/dash-penultimo.png" alt="" />
               </div>
             </div>
 
             <div class="card_caixa_dash" data-color="#08A696">
               <div class="card_cont_dash">
-                <img src="/img/card_bg/dash-ultimo.png" alt="" />
+                <img src="./img/card_bg/dash-ultimo.png" alt="" />
               </div>
             </div>
           </section>
